# klap

./: LICENSE.txt  README.md  contributors.txt
include/: .gitignore  README.md  basic.h  find_parent.h  klap.h  malloc.h  max.h  mempool.h  scan.h
src/: CMakeLists.txt  README.md
src/Analysis/: Analyzer.cpp  Analyzer.h  InvarianceAnalyzer.cpp  InvarianceAnalyzer.h  KernelCallFinder.cpp  KernelCallFinder.h  SpecialStmtFinder.cpp  SpecialStmtFinder.h  TransformCandidateFinder.cpp  TransformCandidateFinder.h
src/Driver/: CompilerOptions.cpp  CompilerOptions.h  Driver.cpp
src/Transform/AG/: Host.cpp  Host.h  Kernel.cpp  Kernel.h
src/Transform/AWB/: Host.cpp  Host.h  Kernel.cpp  Kernel.h
src/Transform/DE/: Kernel.cpp  Kernel.h
src/Utils/: Utils.cpp  Utils.h
test/: .gitignore  Makefile  README.md
test/BFS/: Makefile  README  common.h  graph.cu  graph.h  kernel.base.cu  main.cu  test.sh
test/BT/: Makefile  README  common.h  kernel.base.cu  main.cu  test.sh  verify.cu  verify.h
test/GC/: Makefile  README  common.h  graphColoring.cu  kernel.base.cu  main.cu  test.sh
test/MST/: Makefile  README  common.h  kernel.base.cu  main.cu  test.sh
test/MST/lonestargpu/: cutil_subset.h  gbar.cuh  kernelconfig.h
test/QT/: Makefile  README  common.h  kernel.base.cu  main.cu  test.sh
test/SP/: Makefile  README  common.h  kernel.base.cu  main.cu  test.sh
test/SP/inputs/: random-42000-10000-3.cnf
test/SP/lonestargpu/: component.h  graph.h
test/SSSP/: Makefile  README  common.h  kernel.base.cu  main.cu  test.sh
test/SSSP/inputs/: rmat12.sym.gr
(+2 files in other folders)
